@@ -1,49 +1,38 @@
 ﻿<!--Empty-->
 
 <window>
-	<defaultcontrol always="true">10</defaultcontrol>
+	<defaultcontrol always="true">9</defaultcontrol>
 	<allowoverlay>no</allowoverlay>
 	<controls>
-		<control type="button" id="10">
-			<description>Trigger Weather</description>
-			<texturenofocus>-</texturenofocus>
-			<texturefocus>-</texturefocus>
-			<label>$INFO[Weather.Conditions]</label>
-			<font>-</font>
-			<onfocus>SetFocus(12)</onfocus>
-		</control>
-<!--	<control type="button" id="11">
-			<description>Trigger Latest Added</description>
-			<texturenofocus>-</texturenofocus>
-			<texturefocus>-</texturefocus>
-			<onfocus>XBMC.RunScript(script.randomitems,limit=10&amp;unplayed=True)</onfocus>
-			<onfocus>Notification(Startup,Random Items Updated)</onfocus> 
-			<onfocus>SetFocus(13)</onfocus> 
-		</control> -->
-		<control type="button" id="12">
-			<description>Trigger Next Aired</description>
-			<texturenofocus>-</texturenofocus>
-			<texturefocus>-</texturefocus>
-			<onfocus>XBMC.RunScript(script.tv.show.next.aired,silent=True)</onfocus>
-			<onfocus>Notification(Startup,TV Guide Updated)</onfocus> 
-			<onfocus>SetFocus(13)</onfocus>
-		</control> 
-		<control type="button" id="13">
+		<control type="button" id="9">
 			<description>trigger</description>
-			<onfocus>ReplaceWindow(Home)</onfocus>
+			<onfocus condition="Skin.HasSetting(Use_Intro_Movie) + System.HasAddon(script.xbmc.intro.movie)">RunScript(script.xbmc.intro.movie)</onfocus>
 			<texturenofocus>-</texturenofocus>
 			<texturefocus>-</texturefocus>
+			<onfocus>SetFocus(10)</onfocus>
 			<visible>!Skin.HasSetting(Use_Startup_Playlist)</visible>
 		</control>
-		<control type="button" id="13">
+		
+		<control type="button" id="9">
 			<description>trigger with startup Playlist</description>
 			<texturenofocus>-</texturenofocus>
 			<texturefocus>-</texturefocus>
 			<onfocus>XBMC.PlayMedia($INFO[Skin.String(Startup_Playlist_Path)])</onfocus>
-			
-			<onfocus>ReplaceWindow(Home)</onfocus>
+		 	<onfocus condition="!Skin.HasSetting(Use_Intro_Movie) + System.HasAddon(script.xbmc.intro.movie)">ReplaceWindow(Home)</onfocus>
+			<onfocus>SetFocus(10)</onfocus>
 			<visible>Skin.HasSetting(Use_Startup_Playlist)</visible>
 		</control>	
+		
+		<control type="button" id="10">
+			<description>Trigger Next Aired</description>
+			<texturenofocus>-</texturenofocus>
+			<texturefocus>-</texturefocus>
+			<onfocus>XBMC.RunScript(script.tv.show.next.aired,silent=True)</onfocus>
+			<onfocus condition="!Skin.HasSetting(Use_Intro_Movie) + System.HasAddon(script.xbmc.intro.movie)">ReplaceWindow(Home)</onfocus>
+			
+		</control> 
+		
+		
 		
 	</controls> 
 </window>
