@@ -233,13 +233,7 @@
 						<onclick>Skin.SetAddon(SubtitleScript_Path,xbmc.python.subtitles)</onclick>
 						<visible>Skin.HasSetting(SubsScript_Enable)</visible>
 					</control>
-				<!-- Not needed - control is available 	
-					<control type="radiobutton" id="106">
-						<include>skin_settings_labels</include>
-						<label>$LOCALIZE[31217]</label>
-						<onclick>Skin.ToggleSetting(hometheater)</onclick>
-						<selected>Skin.HasSetting(hometheater)</selected>
-					</control> -->
+				
 					<control type="radiobutton" id="107">
 						<include>skin_settings_labels</include>
 						<label>$LOCALIZE[31248]</label>
@@ -287,7 +281,9 @@
 						<texturenofocus>MenuItemNF.png</texturenofocus>
 						<onclick>Skin.ToggleSetting(Use_Startup_Playlist)</onclick>
 						<selected>Skin.HasSetting(Use_Startup_Playlist)</selected>
+						<onclick>Skin.Reset(Use_Intro_Movie)</onclick>
 					</control>
+					
 					<control type="button" id="122">
 						<description>Startup Playlist Path</description>
 						<width>740</width>
@@ -302,7 +298,28 @@
 						<colordiffuse>mainblue</colordiffuse>
 						<texturefocus>MenuItemFO.png</texturefocus>
 						<texturenofocus>MenuItemNF.png</texturenofocus>
-						<enable>Skin.HasSetting(Use_Startup_Playlist)</enable>
+						
+						
+					</control>
+					
+					
+					<control type="radiobutton" id="123">
+						<description>Use Intro Movie</description>
+						<include>skin_settings_labels</include>
+						<width>740</width>
+						<height>30</height>
+						<label>Enable Startup Video</label>
+						 <font>Font_KeyboardTitle</font>
+						<textoffsetx>30</textoffsetx>
+						<textcolor>grey2</textcolor>
+						<focusedcolor>white</focusedcolor>
+						<colordiffuse>mainblue</colordiffuse>
+						<texturefocus>mainmenu/home_bottom_white.png</texturefocus>
+						<texturenofocus>MenuItemNF.png</texturenofocus>
+						<onclick>Skin.ToggleSetting(Use_Intro_Movie)</onclick>
+						<selected>Skin.HasSetting(Use_Intro_Movie)</selected>
+						<onclick>Skin.Reset(Use_Startup_Playlist)</onclick>
+						
 					</control>
 					<!-- <control type="label" id="123">
 						<width>740</width>
